--- a/src/sass/_primary-nav.scss
+++ b/src/sass/_primary-nav.scss
@@ -7,7 +7,7 @@
 .primary-nav {
   @include clearfix();
   position: relative;
-  z-index: 9999;
+  z-index: 100;
   background-color: rgba(#fff, .95);
   border-bottom: 1px solid rgba(#4a4a4a, .1);
   @media (min-width: map-get($grid-breakpoints, "lg")) {
